--- a/index.html
+++ b/index.html
@@ -1,71 +1,223 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resume by guojianbin</title>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=GB2312">
+<title>Guojianbin's Resume</title>
+<link rel="stylesheet" href="css/resume.css" type="text/css" />
+</head>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Resume</h1>
-        <p>sec</p>
+<body>
+<ul id="nav">
+	<li class="current"><a href="#section-1">关于我</a></li>
+	<li><a href="#section-2">专业技能</a></li>
+	<li><a href="#section-3">工作经历</a></li>
+	<li><a href="#section-4">个人开源</a></li>
+	<li><a href="#section-5">项目经验</a></li>
+	<li><a href="#section-6">获奖情况</a></li>
+</ul>
 
-        <p class="view"><a href="https://github.com/guojianbin/resume">View the Project on GitHub <small>guojianbin/resume</small></a></p>
+<div id="container">
+	<div class="section" id="section-1">
+		<strong>关于我</strong>
 
+		 <table style="width:100%">
+        <tr>
+          <td class="item-title">姓名：</td>
+          <td class="item-content">郭建斌</td>
+          <td class="item-title">年龄：</td>
+          <td class="item-content">25</td>
+        </tr>
+        <tr>
+          <td class="item-title">电话：</td>
+          <td class="item-content">13414238675</td>
+          <td class="item-title">邮箱：</td>
+          <td class="item-content">
+            <a title="给我发邮件" href="mailto:ice_gbin@163.com">ice_gbin@163.com</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="item-title">博客:</td>
+          <td class="item-content" colspan="3">
+            <a title="我的博客" href="http://blog.163.com/ice_gbin/" target="_blank">http://blog.163.com/ice_gbin/</a>
+          </td>
+        </tr>
+      </table>
+		
+		</div>
 
-        <ul>
-          <li><a href="https://github.com/guojianbin/resume/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/guojianbin/resume/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/guojianbin/resume">View On <strong>GitHub</strong></a></li>
+	<div class="section" id="section-2">
+		<strong>专业技能</strong>
+		 <ul>
+          <li>熟悉C/S、B/S下应用开发，尤其擅长B/S快速开发，网站设计和优化，能适应客户灵活多变的需求</li>
+          <li>熟练掌握C#、ASP.NET、AJAX、Web Service、Xml、JavaScript、JQuery等编程开发技术</li>
+          <li>熟练掌握MSSQL等大型数据库设计及开发</li>
+          <li>熟悉三层架构，研究DDD开发模式</li>
+          <li>了解基本Web安全及优化知识</li>
         </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		
+		</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+	<div class="section" id="section-3">
+		<strong>工作经历</strong>
+		
+		<table>
+          <tr>
+            <td style="padding:8px 0px; width:150px;">2012.07至今</td>
+            <td style="padding:8px 0px; width:250px;">广东中原地产代理有限公司</td>
+            <td>Software Engineer</td>
+          </tr>
+          <tr>
+            <td>2011.10至2012.05</td>
+            <td>用友医疗卫生信息系统有限公司</td>
+            <td>开发实习生</td>
+          </tr>
+        </table>
+		
+		</div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+	<div class="section" id="section-4">
+		<strong>个人开源</strong>
+		
+		<div class="page">
+<div class="container_p">
+<div class="column">
+<div class="info">
+<div data-zlname="test2">
+	<img src="images/IRunner.png">
+	<a data-zl-popup="link"  class="ViewImage"  href="images/IRunner.png" title="IRunner"></a>
+	<a data-zl-popup="link2" target="_blank" href="https://github.com/guojianbin/IRunner"></a>
+</div>
+IRunner:利用插件模式开发的项目帮助工具（包含Guid生成器、多国语言翻译工具、文本拼接工具、桌面菜单整理工具、数据库管理工具、快速链接工具等）
+</div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<div class="infoR">
+<div data-zlname="test2">
+	<img src="images/IceWebAutomation.png">
+	
+	<a data-zl-popup="link"  class="ViewImage"  href="images/IceWebAutomation.png" title="IceWebAutomation"></a>
+	<a data-zl-popup="link2" target="_blank" href="https://github.com/guojianbin/IceWebAutomation"></a>
+</div>
+IceWebAutomation:网页表单自动化填写工具，可以自定义作业运行脚本，亦可以通过网页标签快速抓取注入，通过脚本运行引擎执行对应表单填写操作
+</div>
+</div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<div class="column">
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<div class="info">
+<div data-zlname="test2">
+	<img src="images/ECPKB.png">
+	
+	<a data-zl-popup="link"  class="ViewImage"  href="images/ECPKB.png" title="PKB"></a>
+	<a data-zl-popup="link2" target="_blank" href="http://wap.gzcentaline.com.cn/ECPKB/UserLogin.aspx"></a>
+</div>
+PKB:项目知识库管理系统，运用技术:ExtJS + FlexPaper +Ajax+ Ashx,实现No ViewState,No UpdatePanel
+</div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<div class="infoR">
+<div data-zlname="test2">
+	<img src="images/IceDataGenerator.png">
+	
+	<a data-zl-popup="link"  class="ViewImage"  href="images/IceDataGenerator.png"></a>
+	<a data-zl-popup="link2" href="#section-4"></a>
+</div>
+IceDataGenerator:随机测试数据生成器，可以生成SQL脚本、Json、HTML、Javascrit等类型测试数据（涵盖数字、字符串、姓名、地址、Guid等），支持中文和英文版本
+</div>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+</div>
+<div class="clear-fix"></div>
+</div>
+</div>
+		</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+	<div class="section" id="section-5">
+		<strong>项目经验</strong>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+				<div class="page">
+<div class="container_p">
+<div class="column">
+<div class="info">
+	客户资源管理系统
+<div data-zlname="test3">
+	<img src="images/CRM.png" width="500px" height="250px">
+	<a data-zl-popup="link"  class="ViewImage2" href="images/CRM.png" title="客户资源管理系统"></a>
+	<a  class="ViewImage2" href="images/CRM2.png"  title="客户资源管理系统"></a>
+</div>
+利用技术：ASP.NET、JavaScript、Ajax、Ocx、SSRS、Web Service、自定义控件(IceDateTime/IceAutocomplete)
+</div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we鈥檒l help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/guojianbin">guojianbin</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+<div class="infoR">
+网络报数平台 + 中原搜房网
+<div data-zlname="test3">
+	<img src="images/ECPM.png" width="500px" height="250px">
+	<a data-zl-popup="link" class="ViewImage2" href="images/ECPM.png"  title="网络报数平台"></a>
+	<a class="ViewImage2" href="images/ECPM1.png" title="网络报数平台"></a>
+	<a class="ViewImage2" href="images/ECPM2.png" title="网络报数平台"></a>
+	<a class="ViewImage2" href="images/ZYSF.png" title="中原搜房网"></a>
+</div>
+利用技术：ASP.NET、LINQ、FineUI、ExtJS Chart、Repository模式、Boostrap
+</div>
+
+</div>
+
+<div class="column">
+
+<div class="info">
+市占率分析 + 问卷调查
+<div data-zlname="test3">
+	<img src="images/SZLSYS.png" width="500px" height="250px">
+	<a data-zl-popup="link" class="ViewImage2" href="images/SZLSYS.png"  title="市占率分析系统"></a>
+	<a class="ViewImage2" href="images/SZLSYS2.png" title="市占率分析系统"></a>
+	<a class="ViewImage2" href="images/ZYWJDCSYS.png" title="问卷调查"></a>
+</div>
+利用技术：ASP.NET、JavaScript、SSRS、Baidu Map API、动态加载控件
+</div>
+
+<div class="infoR">
+资产借调申请系统 + 名片在线申请系统
+<div data-zlname="test3">
+	<img src="images/ZCJDSYS.png" width="500px" height="250px">
+	<a data-zl-popup="link" class="ViewImage2" href="images/ZCJDSYS.png"  title="资产借调申请系统"></a>
+	<a class="ViewImage2" href="images/MPZXSQSYS.png" title="名片在线申请系统"></a>
+</div>
+利用技术：ASP.NET、Cutter CSS框架、Jquery、Ajax
+</div>
+
+</div>
+
+<div class="clear-fix"></div>
+
+</div>
+</div>
+		</div>
+			<div class="section" id="section-6">
+		<strong>获奖情况</strong>
+		 <ul>
+          <li>全国数据库系统工程师</li>
+          <li>国家励志奖学金一次</li>
+          <li>大学连续四年获取奖学金（包括一等奖学金）</li>
+          <li>大学三好学生一次</li>
+          <li>大一新生杯优秀篮球运动员MVP称号</li>
+        </ul>
+		
+		</div>
+		
+</div>
+
+<script src="js/jquery.js"></script>
+<script src="js/jquery.scrollTo.js"></script>
+<script src="js/jquery.nav.js"></script>
+
+<link rel="stylesheet" href="css/style.css" type="text/css" />
+<link rel="stylesheet" href="css/mate.hover.css" type="text/css" />
+<link rel="stylesheet" href="css/demo.css" type="text/css" />
+<link rel="stylesheet" media="only screen and (min-width:50px) and (max-width: 500px)" href="css/screen_small.css" />
+<link rel="stylesheet" href="css/colorbox.css" type="text/css" /> 
+<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
+<script src="js/jquery.mate-hover.1-1-min.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jQuery ColorBox v1.4.3.js" ></script> 
+<script type="text/javascript" src="js/scrolltopcontrol.js"></script>
+<script type="text/javascript" src="js/resume.js"></script>
+
+</body>
 </html>
