--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
 
 <body>
 <ul id="nav">
-	<li class="current"><a href="#section-1">¹ØÓÚÎÒ</a></li>
-	<li><a href="#section-2">×¨Òµ¼¼ÄÜ</a></li>
-	<li><a href="#section-3">¹¤×÷¾­Àú</a></li>
-	<li><a href="#section-4">¸öÈË¿ªÔ´</a></li>
-	<li><a href="#section-5">ÏîÄ¿¾­Ñé</a></li>
-	<li><a href="#section-6">»ñ½±Çé¿ö</a></li>
+	<li class="current"><a href="#section-1">å…³äºŽæˆ‘</a></li>
+	<li><a href="#section-2">ä¸“ä¸šæŠ€èƒ½</a></li>
+	<li><a href="#section-3">å·¥ä½œç»åŽ†</a></li>
+	<li><a href="#section-4">ä¸ªäººå¼€æº</a></li>
+	<li><a href="#section-5">é¡¹ç›®ç»éªŒ</a></li>
+	<li><a href="#section-6">èŽ·å¥–æƒ…å†µ</a></li>
 </ul>
 
 <div id="container">
 	<div class="section" id="section-1">
-		<strong>¹ØÓÚÎÒ</strong>
+		<strong>å…³äºŽæˆ‘</strong>
 
 		 <table style="width:100%">
         <tr>
-          <td class="item-title">ÐÕÃû£º</td>
-          <td class="item-content">¹ù½¨±ó</td>
-          <td class="item-title">ÄêÁä£º</td>
+          <td class="item-title">å§“åï¼š</td>
+          <td class="item-content">éƒ­å»ºæ–Œ</td>
+          <td class="item-title">å¹´é¾„ï¼š</td>
           <td class="item-content">25</td>
         </tr>
         <tr>
-          <td class="item-title">µç»°£º</td>
+          <td class="item-title">ç”µè¯ï¼š</td>
           <td class="item-content">13414238675</td>
-          <td class="item-title">ÓÊÏä£º</td>
+          <td class="item-title">é‚®ç®±ï¼š</td>
           <td class="item-content">
-            <a title="¸øÎÒ·¢ÓÊ¼þ" href="mailto:ice_gbin@163.com">ice_gbin@163.com</a>
+            <a title="ç»™æˆ‘å‘é‚®ä»¶" href="mailto:ice_gbin@163.com">ice_gbin@163.com</a>
           </td>
         </tr>
         <tr>
-          <td class="item-title">²©¿Í:</td>
+          <td class="item-title">åšå®¢:</td>
           <td class="item-content" colspan="3">
-            <a title="ÎÒµÄ²©¿Í" href="http://blog.163.com/ice_gbin/" target="_blank">http://blog.163.com/ice_gbin/</a>
+            <a title="æˆ‘çš„åšå®¢" href="http://blog.163.com/ice_gbin/" target="_blank">http://blog.163.com/ice_gbin/</a>
           </td>
         </tr>
       </table>
@@ -46,37 +46,37 @@
 		</div>
 
 	<div class="section" id="section-2">
-		<strong>×¨Òµ¼¼ÄÜ</strong>
+		<strong>ä¸“ä¸šæŠ€èƒ½</strong>
 		 <ul>
-          <li>ÊìÏ¤C/S¡¢B/SÏÂÓ¦ÓÃ¿ª·¢£¬ÓÈÆäÉÃ³¤B/S¿ìËÙ¿ª·¢£¬ÍøÕ¾Éè¼ÆºÍÓÅ»¯£¬ÄÜÊÊÓ¦¿Í»§Áé»î¶à±äµÄÐèÇó</li>
-          <li>ÊìÁ·ÕÆÎÕC#¡¢ASP.NET¡¢AJAX¡¢Web Service¡¢Xml¡¢JavaScript¡¢JQueryµÈ±à³Ì¿ª·¢¼¼Êõ</li>
-          <li>ÊìÁ·ÕÆÎÕMSSQLµÈ´óÐÍÊý¾Ý¿âÉè¼Æ¼°¿ª·¢</li>
-          <li>ÊìÏ¤Èý²ã¼Ü¹¹£¬ÑÐ¾¿DDD¿ª·¢Ä£Ê½</li>
-          <li>ÁË½â»ù±¾Web°²È«¼°ÓÅ»¯ÖªÊ¶</li>
+          <li>ç†Ÿæ‚‰C/Sã€B/Sä¸‹åº”ç”¨å¼€å‘ï¼Œå°¤å…¶æ“…é•¿B/Så¿«é€Ÿå¼€å‘ï¼Œç½‘ç«™è®¾è®¡å’Œä¼˜åŒ–ï¼Œèƒ½é€‚åº”å®¢æˆ·çµæ´»å¤šå˜çš„éœ€æ±‚</li>
+          <li>ç†Ÿç»ƒæŽŒæ¡C#ã€ASP.NETã€AJAXã€Web Serviceã€Xmlã€JavaScriptã€JQueryç­‰ç¼–ç¨‹å¼€å‘æŠ€æœ¯</li>
+          <li>ç†Ÿç»ƒæŽŒæ¡MSSQLç­‰å¤§åž‹æ•°æ®åº“è®¾è®¡åŠå¼€å‘</li>
+          <li>ç†Ÿæ‚‰ä¸‰å±‚æž¶æž„ï¼Œç ”ç©¶DDDå¼€å‘æ¨¡å¼</li>
+          <li>äº†è§£åŸºæœ¬Webå®‰å…¨åŠä¼˜åŒ–çŸ¥è¯†</li>
         </ul>
 		
 		</div>
 
 	<div class="section" id="section-3">
-		<strong>¹¤×÷¾­Àú</strong>
+		<strong>å·¥ä½œç»åŽ†</strong>
 		
 		<table>
           <tr>
-            <td style="padding:8px 0px; width:150px;">2012.07ÖÁ½ñ</td>
-            <td style="padding:8px 0px; width:250px;">¹ã¶«ÖÐÔ­µØ²ú´úÀíÓÐÏÞ¹«Ë¾</td>
+            <td style="padding:8px 0px; width:150px;">2012.07è‡³ä»Š</td>
+            <td style="padding:8px 0px; width:250px;">å¹¿ä¸œä¸­åŽŸåœ°äº§ä»£ç†æœ‰é™å…¬å¸</td>
             <td>Software Engineer</td>
           </tr>
           <tr>
-            <td>2011.10ÖÁ2012.05</td>
-            <td>ÓÃÓÑÒ½ÁÆÎÀÉúÐÅÏ¢ÏµÍ³ÓÐÏÞ¹«Ë¾</td>
-            <td>¿ª·¢ÊµÏ°Éú</td>
+            <td>2011.10è‡³2012.05</td>
+            <td>ç”¨å‹åŒ»ç–—å«ç”Ÿä¿¡æ¯ç³»ç»Ÿæœ‰é™å…¬å¸</td>
+            <td>å¼€å‘å®žä¹ ç”Ÿ</td>
           </tr>
         </table>
 		
 		</div>
 
 	<div class="section" id="section-4">
-		<strong>¸öÈË¿ªÔ´</strong>
+		<strong>ä¸ªäººå¼€æº</strong>
 		
 		<div class="page">
 <div class="container_p">
@@ -87,7 +87,7 @@
 	<a data-zl-popup="link"  class="ViewImage"  href="images/IRunner.png" title="IRunner"></a>
 	<a data-zl-popup="link2" target="_blank" href="https://github.com/guojianbin/IRunner"></a>
 </div>
-IRunner:ÀûÓÃ²å¼þÄ£Ê½¿ª·¢µÄÏîÄ¿°ïÖú¹¤¾ß£¨°üº¬GuidÉú³ÉÆ÷¡¢¶à¹úÓïÑÔ·­Òë¹¤¾ß¡¢ÎÄ±¾Æ´½Ó¹¤¾ß¡¢×ÀÃæ²Ëµ¥ÕûÀí¹¤¾ß¡¢Êý¾Ý¿â¹ÜÀí¹¤¾ß¡¢¿ìËÙÁ´½Ó¹¤¾ßµÈ£©
+IRunner:åˆ©ç”¨æ’ä»¶æ¨¡å¼å¼€å‘çš„é¡¹ç›®å¸®åŠ©å·¥å…·ï¼ˆåŒ…å«Guidç”Ÿæˆå™¨ã€å¤šå›½è¯­è¨€ç¿»è¯‘å·¥å…·ã€æ–‡æœ¬æ‹¼æŽ¥å·¥å…·ã€æ¡Œé¢èœå•æ•´ç†å·¥å…·ã€æ•°æ®åº“ç®¡ç†å·¥å…·ã€å¿«é€Ÿé“¾æŽ¥å·¥å…·ç­‰ï¼‰
 </div>
 
 <div class="infoR">
@@ -97,7 +97,7 @@ IRunner:ÀûÓÃ²å¼þÄ£Ê½¿ª·¢µÄÏîÄ¿°ïÖú¹¤¾ß£¨°üº¬GuidÉú³ÉÆ÷¡¢¶à¹úÓïÑÔ·­Òë¹¤¾ß¡¢ÎÄ±¾Æ´
 	<a data-zl-popup="link"  class="ViewImage"  href="images/IceWebAutomation.png" title="IceWebAutomation"></a>
 	<a data-zl-popup="link2" target="_blank" href="https://github.com/guojianbin/IceWebAutomation"></a>
 </div>
-IceWebAutomation:ÍøÒ³±íµ¥×Ô¶¯»¯ÌîÐ´¹¤¾ß£¬¿ÉÒÔ×Ô¶¨Òå×÷ÒµÔËÐÐ½Å±¾£¬Òà¿ÉÒÔÍ¨¹ýÍøÒ³±êÇ©¿ìËÙ×¥È¡×¢Èë£¬Í¨¹ý½Å±¾ÔËÐÐÒýÇæÖ´ÐÐ¶ÔÓ¦±íµ¥ÌîÐ´²Ù×÷
+IceWebAutomation:ç½‘é¡µè¡¨å•è‡ªåŠ¨åŒ–å¡«å†™å·¥å…·ï¼Œå¯ä»¥è‡ªå®šä¹‰ä½œä¸šè¿è¡Œè„šæœ¬ï¼Œäº¦å¯ä»¥é€šè¿‡ç½‘é¡µæ ‡ç­¾å¿«é€ŸæŠ“å–æ³¨å…¥ï¼Œé€šè¿‡è„šæœ¬è¿è¡Œå¼•æ“Žæ‰§è¡Œå¯¹åº”è¡¨å•å¡«å†™æ“ä½œ
 </div>
 </div>
 
@@ -111,7 +111,7 @@ IceWebAutomation:ÍøÒ³±íµ¥×Ô¶¯»¯ÌîÐ´¹¤¾ß£¬¿ÉÒÔ×Ô¶¨Òå×÷ÒµÔËÐÐ½Å±¾£¬Òà¿ÉÒÔÍ¨¹ýÍøÒ³±
 	<a data-zl-popup="link"  class="ViewImage"  href="images/ECPKB.png" title="PKB"></a>
 	<a data-zl-popup="link2" target="_blank" href="http://wap.gzcentaline.com.cn/ECPKB/UserLogin.aspx"></a>
 </div>
-PKB:ÏîÄ¿ÖªÊ¶¿â¹ÜÀíÏµÍ³£¬ÔËÓÃ¼¼Êõ:ExtJS + FlexPaper +Ajax+ Ashx,ÊµÏÖNo ViewState,No UpdatePanel
+PKB:é¡¹ç›®çŸ¥è¯†åº“ç®¡ç†ç³»ç»Ÿï¼Œè¿ç”¨æŠ€æœ¯:ExtJS + FlexPaper +Ajax+ Ashx,å®žçŽ°No ViewState,No UpdatePanel
 </div>
 
 <div class="infoR">
@@ -121,7 +121,7 @@ PKB:ÏîÄ¿ÖªÊ¶¿â¹ÜÀíÏµÍ³£¬ÔËÓÃ¼¼Êõ:ExtJS + FlexPaper +Ajax+ Ashx,ÊµÏÖNo ViewState,
 	<a data-zl-popup="link"  class="ViewImage"  href="images/IceDataGenerator.png"></a>
 	<a data-zl-popup="link2" href="#section-4"></a>
 </div>
-IceDataGenerator:Ëæ»ú²âÊÔÊý¾ÝÉú³ÉÆ÷£¬¿ÉÒÔÉú³ÉSQL½Å±¾¡¢Json¡¢HTML¡¢JavascritµÈÀàÐÍ²âÊÔÊý¾Ý£¨º­¸ÇÊý×Ö¡¢×Ö·û´®¡¢ÐÕÃû¡¢µØÖ·¡¢GuidµÈ£©£¬Ö§³ÖÖÐÎÄºÍÓ¢ÎÄ°æ±¾
+IceDataGenerator:éšæœºæµ‹è¯•æ•°æ®ç”Ÿæˆå™¨ï¼Œå¯ä»¥ç”ŸæˆSQLè„šæœ¬ã€Jsonã€HTMLã€Javascritç­‰ç±»åž‹æµ‹è¯•æ•°æ®ï¼ˆæ¶µç›–æ•°å­—ã€å­—ç¬¦ä¸²ã€å§“åã€åœ°å€ã€Guidç­‰ï¼‰ï¼Œæ”¯æŒä¸­æ–‡å’Œè‹±æ–‡ç‰ˆæœ¬
 </div>
 
 </div>
@@ -131,31 +131,31 @@ IceDataGenerator:Ëæ»ú²âÊÔÊý¾ÝÉú³ÉÆ÷£¬¿ÉÒÔÉú³ÉSQL½Å±¾¡¢Json¡¢HTML¡¢JavascritµÈÀàÐ
 		</div>
 
 	<div class="section" id="section-5">
-		<strong>ÏîÄ¿¾­Ñé</strong>
+		<strong>é¡¹ç›®ç»éªŒ</strong>
 
 				<div class="page">
 <div class="container_p">
 <div class="column">
 <div class="info">
-	¿Í»§×ÊÔ´¹ÜÀíÏµÍ³
+	å®¢æˆ·èµ„æºç®¡ç†ç³»ç»Ÿ
 <div data-zlname="test3">
 	<img src="images/CRM.png" width="500px" height="250px">
-	<a data-zl-popup="link"  class="ViewImage2" href="images/CRM.png" title="¿Í»§×ÊÔ´¹ÜÀíÏµÍ³"></a>
-	<a  class="ViewImage2" href="images/CRM2.png"  title="¿Í»§×ÊÔ´¹ÜÀíÏµÍ³"></a>
+	<a data-zl-popup="link"  class="ViewImage2" href="images/CRM.png" title="å®¢æˆ·èµ„æºç®¡ç†ç³»ç»Ÿ"></a>
+	<a  class="ViewImage2" href="images/CRM2.png"  title="å®¢æˆ·èµ„æºç®¡ç†ç³»ç»Ÿ"></a>
 </div>
-ÀûÓÃ¼¼Êõ£ºASP.NET¡¢JavaScript¡¢Ajax¡¢Ocx¡¢SSRS¡¢Web Service¡¢×Ô¶¨Òå¿Ø¼þ(IceDateTime/IceAutocomplete)
+åˆ©ç”¨æŠ€æœ¯ï¼šASP.NETã€JavaScriptã€Ajaxã€Ocxã€SSRSã€Web Serviceã€è‡ªå®šä¹‰æŽ§ä»¶(IceDateTime/IceAutocomplete)
 </div>
 
 <div class="infoR">
-ÍøÂç±¨ÊýÆ½Ì¨ + ÖÐÔ­ËÑ·¿Íø
+ç½‘ç»œæŠ¥æ•°å¹³å° + ä¸­åŽŸæœæˆ¿ç½‘
 <div data-zlname="test3">
 	<img src="images/ECPM.png" width="500px" height="250px">
-	<a data-zl-popup="link" class="ViewImage2" href="images/ECPM.png"  title="ÍøÂç±¨ÊýÆ½Ì¨"></a>
-	<a class="ViewImage2" href="images/ECPM1.png" title="ÍøÂç±¨ÊýÆ½Ì¨"></a>
-	<a class="ViewImage2" href="images/ECPM2.png" title="ÍøÂç±¨ÊýÆ½Ì¨"></a>
-	<a class="ViewImage2" href="images/ZYSF.png" title="ÖÐÔ­ËÑ·¿Íø"></a>
+	<a data-zl-popup="link" class="ViewImage2" href="images/ECPM.png"  title="ç½‘ç»œæŠ¥æ•°å¹³å°"></a>
+	<a class="ViewImage2" href="images/ECPM1.png" title="ç½‘ç»œæŠ¥æ•°å¹³å°"></a>
+	<a class="ViewImage2" href="images/ECPM2.png" title="ç½‘ç»œæŠ¥æ•°å¹³å°"></a>
+	<a class="ViewImage2" href="images/ZYSF.png" title="ä¸­åŽŸæœæˆ¿ç½‘"></a>
 </div>
-ÀûÓÃ¼¼Êõ£ºASP.NET¡¢LINQ¡¢FineUI¡¢ExtJS Chart¡¢RepositoryÄ£Ê½¡¢Boostrap
+åˆ©ç”¨æŠ€æœ¯ï¼šASP.NETã€LINQã€FineUIã€ExtJS Chartã€Repositoryæ¨¡å¼ã€Boostrap
 </div>
 
 </div>
@@ -163,24 +163,24 @@ IceDataGenerator:Ëæ»ú²âÊÔÊý¾ÝÉú³ÉÆ÷£¬¿ÉÒÔÉú³ÉSQL½Å±¾¡¢Json¡¢HTML¡¢JavascritµÈÀàÐ
 <div class="column">
 
 <div class="info">
-ÊÐÕ¼ÂÊ·ÖÎö + ÎÊ¾íµ÷²é
+å¸‚å çŽ‡åˆ†æž + é—®å·è°ƒæŸ¥
 <div data-zlname="test3">
 	<img src="images/SZLSYS.png" width="500px" height="250px">
-	<a data-zl-popup="link" class="ViewImage2" href="images/SZLSYS.png"  title="ÊÐÕ¼ÂÊ·ÖÎöÏµÍ³"></a>
-	<a class="ViewImage2" href="images/SZLSYS2.png" title="ÊÐÕ¼ÂÊ·ÖÎöÏµÍ³"></a>
-	<a class="ViewImage2" href="images/ZYWJDCSYS.png" title="ÎÊ¾íµ÷²é"></a>
+	<a data-zl-popup="link" class="ViewImage2" href="images/SZLSYS.png"  title="å¸‚å çŽ‡åˆ†æžç³»ç»Ÿ"></a>
+	<a class="ViewImage2" href="images/SZLSYS2.png" title="å¸‚å çŽ‡åˆ†æžç³»ç»Ÿ"></a>
+	<a class="ViewImage2" href="images/ZYWJDCSYS.png" title="é—®å·è°ƒæŸ¥"></a>
 </div>
-ÀûÓÃ¼¼Êõ£ºASP.NET¡¢JavaScript¡¢SSRS¡¢Baidu Map API¡¢¶¯Ì¬¼ÓÔØ¿Ø¼þ
+åˆ©ç”¨æŠ€æœ¯ï¼šASP.NETã€JavaScriptã€SSRSã€Baidu Map APIã€åŠ¨æ€åŠ è½½æŽ§ä»¶
 </div>
 
 <div class="infoR">
-×Ê²ú½èµ÷ÉêÇëÏµÍ³ + ÃûÆ¬ÔÚÏßÉêÇëÏµÍ³
+èµ„äº§å€Ÿè°ƒç”³è¯·ç³»ç»Ÿ + åç‰‡åœ¨çº¿ç”³è¯·ç³»ç»Ÿ
 <div data-zlname="test3">
 	<img src="images/ZCJDSYS.png" width="500px" height="250px">
-	<a data-zl-popup="link" class="ViewImage2" href="images/ZCJDSYS.png"  title="×Ê²ú½èµ÷ÉêÇëÏµÍ³"></a>
-	<a class="ViewImage2" href="images/MPZXSQSYS.png" title="ÃûÆ¬ÔÚÏßÉêÇëÏµÍ³"></a>
+	<a data-zl-popup="link" class="ViewImage2" href="images/ZCJDSYS.png"  title="èµ„äº§å€Ÿè°ƒç”³è¯·ç³»ç»Ÿ"></a>
+	<a class="ViewImage2" href="images/MPZXSQSYS.png" title="åç‰‡åœ¨çº¿ç”³è¯·ç³»ç»Ÿ"></a>
 </div>
-ÀûÓÃ¼¼Êõ£ºASP.NET¡¢Cutter CSS¿ò¼Ü¡¢Jquery¡¢Ajax
+åˆ©ç”¨æŠ€æœ¯ï¼šASP.NETã€Cutter CSSæ¡†æž¶ã€Jqueryã€Ajax
 </div>
 
 </div>
@@ -191,13 +191,13 @@ IceDataGenerator:Ëæ»ú²âÊÔÊý¾ÝÉú³ÉÆ÷£¬¿ÉÒÔÉú³ÉSQL½Å±¾¡¢Json¡¢HTML¡¢JavascritµÈÀàÐ
 </div>
 		</div>
 			<div class="section" id="section-6">
-		<strong>»ñ½±Çé¿ö</strong>
+		<strong>èŽ·å¥–æƒ…å†µ</strong>
 		 <ul>
-          <li>È«¹úÊý¾Ý¿âÏµÍ³¹¤³ÌÊ¦</li>
-          <li>¹ú¼ÒÀøÖ¾½±Ñ§½ðÒ»´Î</li>
-          <li>´óÑ§Á¬ÐøËÄÄê»ñÈ¡½±Ñ§½ð£¨°üÀ¨Ò»µÈ½±Ñ§½ð£©</li>
-          <li>´óÑ§ÈýºÃÑ§ÉúÒ»´Î</li>
-          <li>´óÒ»ÐÂÉú±­ÓÅÐãÀºÇòÔË¶¯Ô±MVP³ÆºÅ</li>
+          <li>å…¨å›½æ•°æ®åº“ç³»ç»Ÿå·¥ç¨‹å¸ˆ</li>
+          <li>å›½å®¶åŠ±å¿—å¥–å­¦é‡‘ä¸€æ¬¡</li>
+          <li>å¤§å­¦è¿žç»­å››å¹´èŽ·å–å¥–å­¦é‡‘ï¼ˆåŒ…æ‹¬ä¸€ç­‰å¥–å­¦é‡‘ï¼‰</li>
+          <li>å¤§å­¦ä¸‰å¥½å­¦ç”Ÿä¸€æ¬¡</li>
+          <li>å¤§ä¸€æ–°ç”Ÿæ¯ä¼˜ç§€ç¯®çƒè¿åŠ¨å‘˜MVPç§°å·</li>
         </ul>
 		
 		</div>
